--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "chromadb": "^1.4.1",
     "clsx": "^1.2.1",
     "framer-motion": "^10.11.2",
+    "gapi-script": "^1.2.0",
     "html-to-image": "^1.11.11",
     "i18next": "^22.4.15",
     "langchain": "^0.0.63",
