--- a/next/package.json
+++ b/next/package.json
@@ -39,6 +39,7 @@
     "clsx": "^1.2.1",
     "cookies-next": "^2.1.1",
     "framer-motion": "^10.12.8",
+    "gapi-script": "^1.2.0",
     "html-to-image": "^1.11.11",
     "i18next": "^22.4.15",
     "langchain": "^0.0.63",
